<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/lin_white_bg_rou"
    android:layout_marginTop="@dimen/ma_top_10"
    android:layout_marginRight="@dimen/ma_top_10"
    android:layout_marginLeft="@dimen/ma_top_10">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/ma_5"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ma_top_10">
 <ImageView
     android:id="@+id/btn_pay_car"
     android:layout_width="40dp"
     android:layout_height="40dp"
     android:src="@mipmap/pay_car_xl_img"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pay_car"
            android:textColor="@color/text_black_color"
            android:layout_marginTop="@dimen/ma_3"
            android:textSize="@dimen/text_size_12"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pay_car_next"
            android:textSize="@dimen/text_size_10"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_online_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/ma_5"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/online_car_xl_img"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_online_car"
            android:textColor="@color/text_black_color"
            android:layout_marginTop="@dimen/ma_3"
            android:textSize="@dimen/text_size_12"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_online_car_next"
            android:textSize="@dimen/text_size_10"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/pay_house_investment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/ma_5"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/pay_house_xl_img"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hainan"
            android:textColor="@color/text_black_color"
            android:layout_marginTop="@dimen/ma_3"
            android:textSize="@dimen/text_size_12"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hainan_next"
            android:textSize="@dimen/text_size_10"/>
    </LinearLayout>
</LinearLayout>