<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/lin_white_bg_rou"
    android:layout_marginLeft="@dimen/ma_top_10"
    android:layout_marginRight="@dimen/ma_top_10"
    android:layout_marginTop="@dimen/ma_top_10">

    <LinearLayout
        android:id="@+id/btn_bar_coder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/bar_coder_members_xl_img"
            android:layout_margin="@dimen/padding_15"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_members"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/text_black_color_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_bar_code"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/text_black_color_3"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/line_color"
        android:layout_margin="@dimen/padding_15"
        />
    <LinearLayout
        android:id="@+id/btn_user_un"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/union_user_xl_img"
            android:layout_margin="@dimen/padding_15"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_union"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/text_black_color_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_user"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/text_black_color_3"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>