<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ma_left"
        android:layout_marginRight="@dimen/ma_left"
        android:background="@drawable/lin_black_bg_rou"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ma_6"
                android:src="@mipmap/yika_head_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/text_yika"
                android:textColor="@color/text_yika_color"
                android:textSize="@dimen/text_size_8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/lin_golden_bg_rou"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ma_left_3"
                android:text="@string/text_yika_upgrade"
                android:textSize="@dimen/text_size_8" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lin_white_bg_rou"
        android:layout_marginLeft="@dimen/ma_top_10"
        android:layout_marginRight="@dimen/ma_top_10"
        android:padding="@dimen/ma_8"
        android:orientation="horizontal"
       >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/ma_top_5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_num_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_num"
                android:singleLine="true"
                android:textColor="@color/text2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_balance"
                android:layout_marginTop="@dimen/ma_6"
                android:textColor="@color/text_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/ma_top_5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_num_vouchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_num"
                android:singleLine="true"
                android:textColor="@color/text2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_vouchers"
                android:layout_marginTop="@dimen/ma_6"
                android:textColor="@color/text_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/ma_top_5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_num_integral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_num"
                android:singleLine="true"
                android:textColor="@color/text2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_integral"
                android:layout_marginTop="@dimen/ma_6"
                android:textColor="@color/text_line" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>