<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/ma_top_5"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/lin_white_bg_rou"
        android:layout_marginLeft="@dimen/ma_top_10"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_shop_car"
                android:textColor="@color/text_black_color"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/text_size_14"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_shop_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_12"
                    android:text="@string/text_shop_car_num"
                    android:layout_marginLeft="@dimen/ma_5"
                    android:drawablePadding="@dimen/ma_2"
                    android:maxLines="9"
                    android:singleLine="true"
                    android:drawableRight="@mipmap/enter_the_img"
                   />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/shop_car_img"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/lin_white_bg_rou"
        android:layout_marginLeft="@dimen/ma_left_15"
        android:layout_marginRight="@dimen/ma_top_10"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_black_color"
            android:layout_marginLeft="@dimen/ma_left_15"
            android:textSize="@dimen/text_size_14"
            android:layout_gravity="center_vertical"
            android:text="@string/text_my_attention"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_my_attention_num"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/ma_left_15"
            android:layout_marginRight="@dimen/ma_right_15"
            android:textSize="@dimen/text_size_12"
            android:drawablePadding="@dimen/ma_2"
            android:drawableRight="@mipmap/enter_the_img"
            android:singleLine="true"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"
            android:layout_marginLeft="@dimen/ma_left_15"
            android:layout_marginRight="@dimen/ma_right_15"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/ma_left_15"
            android:layout_weight="1"
            android:text="@string/text_my_footprint"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/text_size_14" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/ma_left_15"
                android:layout_marginRight="@dimen/ma_right_15"
                android:drawableRight="@mipmap/enter_the_img"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>